tests/ui/form_data_from_str_and_raw.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/form_data_from_str_and_raw.rs:26:10
   |
26 | #[derive(FormData)]
   |          ^^^^^^^^ multiple `convert_value` found
   |
note: candidate #1 is defined in an impl of the trait `gotham_formdata::conversion::ConvertRawBytes` for the type `CustomType`
  --> $DIR/form_data_from_str_and_raw.rs:19:2
   |
19 |     fn convert_value(_name: &'a str, _value: Value<'a, E>) -> ConversionFuture<'a, Self, E> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: candidate #2 is defined in an impl of the trait `gotham_formdata::conversion::ConvertFromStr` for the type `T`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: disambiguate the associated function for candidate #1
   |
26 | #[derive(gotham_formdata::conversion::ConvertRawBytes::convert_value)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: disambiguate the associated function for candidate #2
   |
26 | #[derive(gotham_formdata::conversion::ConvertFromStr::convert_value)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
